--- a/smartphonemodule/src/main/res/layout/activity_sensor_list.xml
+++ b/smartphonemodule/src/main/res/layout/activity_sensor_list.xml
@@ -7,6 +7,13 @@
     tools:context=".SensorListActivity"
     android:orientation="vertical">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="센서 리스트"
+        android:textSize="25dp"
+        android:gravity="center"/>
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
